docs: add documentation for sigin
